--- a/Enamel/src/enamel/ViewAuthoringApp.fxml
+++ b/Enamel/src/enamel/ViewAuthoringApp.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -20,8 +21,8 @@
                               
                               	<Button layoutX="396.0" layoutY="366.0" prefHeight="50.0" prefWidth="151.0" text="Existing Scenario" />
          <Button layoutX="396.0" layoutY="266.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="151.0" text="Create  Scenario" />
-         <Button layoutX="396.0" layoutY="466.0" prefHeight="50.0" prefWidth="151.0" text="Recommended Scenarios" />
-         <Button layoutX="396.0" layoutY="566.0" prefHeight="50.0" prefWidth="151.0" text="About Authoring App" />
+         <Button layoutX="396.0" layoutY="466.0" prefHeight="50.0" prefWidth="151.0" text="Tutorial" />
+         <Button layoutX="396.0" layoutY="566.0" prefHeight="50.0" prefWidth="151.0" text="User Manual" />
          <Label layoutX="207.0" layoutY="98.0" text="This application aims to provide visually-impaired users with the ability to help kids learn to how to read braille" />
          <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="1000.0">
            <menus>
@@ -44,11 +45,11 @@
          </MenuBar>
          <Label layoutX="256.0" layoutY="332.0" text="Create a new teaching scenario for your student(s) using a convenient application" />
          <Label layoutX="191.0" layoutY="433.0" text="Choose an existing teaching scenario from one that has been previously created or one from the file browser" />
-         <Label layoutX="305.0" layoutY="534.0" text="Choose from some teaching scenarios already created for you" />
-         <Label layoutX="384.0" layoutY="635.0" text="Questions? Click here to learn more" />
+         <Label layoutX="357.0" layoutY="532.0" text="Basic tutorial on how to use the application" />
          <Text layoutX="373.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WELCOME TO THE AUTHORING APP!" />
-         <CheckBox layoutX="827.0" layoutY="719.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="159.0" text="Are you visually capable?" />
-         <CheckBox layoutX="14.0" layoutY="719.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="304.0" text="Would you like to record the audio for this session" />
+         <CheckBox layoutX="393.0" layoutY="660.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="159.0" text="Are you visually capable?" />
+         <Label layoutX="430.0" layoutY="179.0" prefHeight="17.0" prefWidth="85.0" text="Reading Speed" />
+         <ChoiceBox fx:id="readSpeedBox" layoutX="397.0" layoutY="203.0" prefWidth="150.0" />
       </children>
    </AnchorPane>
 
