--- a/Enamel/src/enamel/MainMenuViewAA.fxml
+++ b/Enamel/src/enamel/MainMenuViewAA.fxml
@@ -9,9 +9,10 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="enamel.ControllerAuthoringApp">
+<VBox prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="enamel.MainMenuControllerAA">
    <AnchorPane prefHeight="812.0" prefWidth="1000.0">
       <children>
       
@@ -19,10 +20,22 @@
                               
                               
                               
-                              	<Button layoutX="396.0" layoutY="366.0" prefHeight="50.0" prefWidth="151.0" text="Existing Scenario" />
-         <Button layoutX="396.0" layoutY="266.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="151.0" text="Create  Scenario" />
-         <Button layoutX="396.0" layoutY="466.0" prefHeight="50.0" prefWidth="151.0" text="Tutorial" />
-         <Button layoutX="396.0" layoutY="566.0" prefHeight="50.0" prefWidth="151.0" text="User Manual" />
+                              	<Button layoutX="396.0" layoutY="366.0" prefHeight="50.0" prefWidth="151.0" text="Existing Scenario">
+            <font>
+               <Font name="Arial Black" size="12.0" />
+            </font></Button>
+         <Button layoutX="396.0" layoutY="266.0" mnemonicParsing="false" onAction="#createScenarioButton" prefHeight="50.0" prefWidth="151.0" text="Create  Scenario">
+            <font>
+               <Font name="Arial Black" size="12.0" />
+            </font></Button>
+         <Button layoutX="396.0" layoutY="466.0" prefHeight="50.0" prefWidth="151.0" text="Tutorial">
+            <font>
+               <Font name="Arial Black" size="12.0" />
+            </font></Button>
+         <Button layoutX="396.0" layoutY="566.0" prefHeight="50.0" prefWidth="151.0" text="User Manual">
+            <font>
+               <Font name="Arial Black" size="12.0" />
+            </font></Button>
          <Label layoutX="207.0" layoutY="98.0" text="This application aims to provide visually-impaired users with the ability to help kids learn to how to read braille" />
          <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="1000.0">
            <menus>
