made the scenario creation view and controller, implemented load scenario button, return to main menu buttons work now

--- a/Enamel/src/enamel/CreationSetupView.fxml
+++ b/Enamel/src/enamel/CreationSetupView.fxml
@@ -17,13 +17,12 @@
                   <Font name="Calisto MT Bold Italic" size="13.0" />
                </font>
             </Label>
-            <ChoiceBox fx:id="cellsBox" layoutX="223.0" layoutY="198.0" prefHeight="25.0" prefWidth="53.0" />
             <ChoiceBox fx:id="nobBox" layoutX="223.0" layoutY="269.0" prefHeight="25.0" prefWidth="53.0" />
-            <Label layoutX="137.0" layoutY="202.0" text="BRAILLE CELLS" />
+            <Label layoutX="67.0" layoutY="202.0" text="NUMBER OF BRAILLE CELLS" />
             <Label layoutX="92.0" layoutY="273.0" text="NUMBER OF BUTTONS" />
             <TextField layoutX="126.0" layoutY="143.0" />
             <Label layoutX="115.0" layoutY="107.0" text="Please enter the scenario name: " />
-            <Button layoutX="227.0" layoutY="333.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="135.0" text="Continue">
+            <Button layoutX="227.0" layoutY="333.0" mnemonicParsing="false" onAction="#continueButton" prefHeight="42.0" prefWidth="135.0" text="Continue">
                <font>
                   <Font name="Arial Black" size="12.0" />
                </font>
@@ -33,6 +32,7 @@
                   <Font name="Arial Black" size="12.0" />
                </font>
             </Button>
+            <TextField layoutX="223.0" layoutY="198.0" prefHeight="25.0" prefWidth="53.0" />
          </children>
     </AnchorPane>
   </children>
