--- a/Enamel/src/enamel/MainMenuViewAA.fxml
+++ b/Enamel/src/enamel/MainMenuViewAA.fxml
@@ -12,19 +12,19 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="enamel.MainMenuControllerAA">
-   <AnchorPane prefHeight="812.0" prefWidth="1000.0">
+<VBox prefHeight="768" prefWidth="1024.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="enamel.MainMenuControllerAA">
+   <AnchorPane prefHeight="768" prefWidth="1000.0">
       <children>
       
                               
                               
                               
                               
-                              	<Button layoutX="396.0" layoutY="366.0" prefHeight="50.0" prefWidth="151.0" text="Existing Scenario">
+                              	<Button layoutX="396.0" layoutY="266.0" onAction="#loadScenarioButton" prefHeight="50.0" prefWidth="151.0" text="Load Scenario">
             <font>
                <Font name="Arial Black" size="12.0" />
             </font></Button>
-         <Button layoutX="396.0" layoutY="266.0" mnemonicParsing="false" onAction="#createScenarioButton" prefHeight="50.0" prefWidth="151.0" text="Create  Scenario">
+         <Button layoutX="396.0" layoutY="166.0" mnemonicParsing="false" onAction="#createScenarioButton" prefHeight="50.0" prefWidth="151.0" text="Create  Scenario">
             <font>
                <Font name="Arial Black" size="12.0" />
             </font></Button>
@@ -36,8 +36,8 @@
             <font>
                <Font name="Arial Black" size="12.0" />
             </font></Button>
-         <Label layoutX="207.0" layoutY="98.0" text="This application aims to provide visually-impaired users with the ability to help kids learn to how to read braille" />
-         <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="1000.0">
+         <Label layoutX="207.0" layoutY="98.0" text="This application aims to provide visually-impaired users with the ability to help kids learn to how to read braille." />
+         <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="1024.0">
            <menus>
              <Menu mnemonicParsing="false" text="File">
                <items>
@@ -56,13 +56,22 @@
              </Menu>
            </menus>
          </MenuBar>
-         <Label layoutX="256.0" layoutY="332.0" text="Create a new teaching scenario for your student(s) using a convenient application" />
-         <Label layoutX="191.0" layoutY="433.0" text="Choose an existing teaching scenario from one that has been previously created or one from the file browser" />
-         <Label layoutX="357.0" layoutY="532.0" text="Basic tutorial on how to use the application" />
-         <Text layoutX="373.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WELCOME TO THE AUTHORING APP!" />
-         <CheckBox layoutX="393.0" layoutY="660.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="159.0" text="Are you visually capable?" />
-         <Label layoutX="430.0" layoutY="179.0" prefHeight="17.0" prefWidth="85.0" text="Reading Speed" />
-         <ChoiceBox fx:id="readSpeedBox" layoutX="397.0" layoutY="203.0" prefWidth="150.0" />
+         <Label layoutX="256.0" layoutY="232.0" text="Create a new teaching scenario for your student(s) using a convenient application." />
+         <Label layoutX="197.0" layoutY="335.0" text="Choose an existing teaching scenario from one that has been previously created or one from the file browser." />
+         <Label layoutX="357.0" layoutY="532.0" text="Basic tutorial on how to use the application." />
+         <Text layoutX="231.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the Authoring App!">
+            <font>
+               <Font name="Broadway" size="32.0" />
+            </font></Text>
+         <CheckBox layoutX="795.0" layoutY="670.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="159.0" text="Are you visually capable?" />
+         <Label layoutX="114.0" layoutY="682.0" prefHeight="17.0" prefWidth="85.0" text="Reading Speed" />
+         <ChoiceBox fx:id="readSpeedBox" layoutX="81.0" layoutY="703.0" prefWidth="150.0" />
+         <Button layoutX="396.0" layoutY="366.0" prefHeight="50.0" prefWidth="151.0" text="Edit Scenario">
+            <font>
+               <Font name="Arial Black" size="12.0" />
+            </font>
+         </Button>
+         <Label layoutX="383.0" layoutY="433.0" text="Edit a previously created scenario." />
       </children>
    </AnchorPane>
 
