--- a/Enamel/src/enamel/ScenarioCreationView.fxml
+++ b/Enamel/src/enamel/ScenarioCreationView.fxml
@@ -80,17 +80,17 @@
                         <Font name="Arial Black" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="135.0" text="Finish Scenario">
+                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="135.0" text="Finish Scenario (Save Scenario)" textAlignment="CENTER" wrapText="true">
                      <font>
                         <Font name="Arial Black" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="135.0" text="Finish Scene">
+                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="135.0" text="Finish Scene (Save Scene)" textAlignment="CENTER" wrapText="true">
                      <font>
                         <Font name="Arial Black" size="12.0" />
                      </font>
                   </Button>
-                  <Button contentDisplay="CENTER" mnemonicParsing="false" prefHeight="42.0" prefWidth="135.0" text="Selected Scene" wrapText="true">
+                  <Button contentDisplay="CENTER" mnemonicParsing="false" prefHeight="42.0" prefWidth="135.0" text="Go to Selected Scene" textAlignment="CENTER" wrapText="true">
                      <font>
                         <Font name="Arial Black" size="12.0" />
                      </font>
@@ -99,7 +99,6 @@
             </HBox>
             <AnchorPane layoutY="4.0" prefHeight="667.0" prefWidth="813.0">
                <children>
-                  <Button layoutX="563.0" layoutY="619.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="163.0" text="Save Interaction" />
                   <Label layoutX="14.0" layoutY="625.0" prefHeight="17.0" prefWidth="501.0" text="*Note you must click the 'Save Interaction' button for each button you set an interaction for." />
                   <VBox layoutX="-2.0" layoutY="77.0" prefHeight="90.0" prefWidth="813.0" spacing="2.0">
                      <children>
@@ -142,7 +141,7 @@
                               <VBox prefHeight="57.0" prefWidth="100.0" spacing="16.0">
                                  <children>
                                     <Button mnemonicParsing="false" onAction="#addTextButton" prefHeight="27.0" prefWidth="119.0" text="Add Text" />
-                                    <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="119.0" text="Record Audio" />
+                                    <Button mnemonicParsing="false" onAction="#recordAudioButton" prefHeight="27.0" prefWidth="119.0" text="Record Audio" />
                                  </children>
                                  <HBox.margin>
                                     <Insets bottom="5.0" top="5.0" />
@@ -238,13 +237,13 @@
                                     <Font name="Cooper Black" size="30.0" />
                                  </font>
                               </Label>
-                              <VBox alignment="CENTER_LEFT" prefHeight="102.0" prefWidth="255.0" spacing="20.0">
+                              <VBox alignment="CENTER" prefHeight="102.0" prefWidth="255.0" spacing="20.0">
                                  <children>
-                                    <Label text="Enter a letter from the english alphabet:" />
-                                    <HBox maxWidth="230.0" prefHeight="25.0" prefWidth="230.0" spacing="20.0">
+                                    <Label prefHeight="17.0" prefWidth="215.0" text="Enter a letter from the english alphabet:" />
+                                    <HBox alignment="TOP_CENTER" maxWidth="230.0" prefHeight="25.0" prefWidth="202.0" spacing="20.0">
                                        <children>
-                                          <TextField fx:id="letterTextField" />
-                                          <Button mnemonicParsing="false" text="Set Pins" />
+                                          <ChoiceBox fx:id="letterBox" prefHeight="25.0" prefWidth="59.0" />
+                                          <Button mnemonicParsing="false" onAction="#setPinsButton" text="Set Pins" />
                                        </children>
                                     </HBox>
                                  </children>
@@ -273,34 +272,41 @@
                         </Label>
                         <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                            <children>
-                              <VBox maxHeight="55.0" prefHeight="82.0" prefWidth="94.0" spacing="10.0">
+                              <VBox alignment="CENTER" maxHeight="55.0" prefHeight="82.0" prefWidth="94.0" spacing="10.0">
                                  <children>
                                     <Label text="Button Number:" />
                                     <ChoiceBox fx:id="nobBox" prefHeight="25.0" prefWidth="47.0" />
                                  </children>
                               </VBox>
-                              <VBox maxHeight="44.0" prefHeight="63.0" prefWidth="179.0" spacing="10.0">
+                              <VBox alignment="CENTER" maxHeight="44.0" prefHeight="63.0" prefWidth="179.0" spacing="10.0">
                                  <children>
-                                    <Label text="Interaction on Button Click:" />
+                                    <Label text="Interaction on button click:" />
                                     <ChoiceBox fx:id="interactionBox" prefHeight="27.0" prefWidth="171.0" />
                                  </children>
                               </VBox>
-                              <VBox prefHeight="95.0" prefWidth="478.0" spacing="10.0">
+                              <HBox alignment="BOTTOM_CENTER" prefHeight="95.0" prefWidth="480.0" spacing="15.0">
                                  <children>
-                                    <Label text="Speech on Button Click If Applicable:" />
-                                    <HBox prefHeight="62.0" prefWidth="412.0" spacing="30.0">
+                                    <VBox prefHeight="95.0" prefWidth="333.0">
                                        <children>
-                                          <TextArea fx:id="interactionButtonTextArea" prefHeight="51.0" prefWidth="526.0" />
-                                          <VBox prefHeight="66.0" prefWidth="342.0" spacing="9.0">
+                                          <HBox alignment="CENTER" prefHeight="34.0" prefWidth="478.0" spacing="5.0">
                                              <children>
-                                                <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="119.0" text="Add Text" />
-                                                <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="119.0" text="Record Audio" />
+                                                <Label text="Speech/Audio on button click. (OPTIONAL)" />
+                                                <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="92.0" text="Record Audio" />
                                              </children>
-                                          </VBox>
+                                          </HBox>
+                                          <HBox prefHeight="62.0" prefWidth="412.0" spacing="30.0">
+                                             <children>
+                                                <TextArea fx:id="interactionTextArea" prefHeight="62.0" prefWidth="360.0" />
+                                             </children>
+                                          </HBox>
                                        </children>
-                                    </HBox>
+                                    </VBox>
+                                    <Button mnemonicParsing="false" onAction="#saveInteractionButton" prefHeight="56.0" prefWidth="115.0" text="Save Interaction" />
                                  </children>
-                              </VBox>
+                                 <padding>
+                                    <Insets right="10.0" />
+                                 </padding>
+                              </HBox>
                            </children>
                            <padding>
                               <Insets top="5.0" />
@@ -311,23 +317,9 @@
                         <Insets left="20.0" />
                      </padding>
                   </VBox>
-                  <HBox alignment="CENTER" layoutX="6.0" layoutY="-5.0" prefHeight="80.0" prefWidth="801.0" spacing="140.0">
+                  <HBox layoutX="6.0" layoutY="-5.0" prefHeight="80.0" prefWidth="805.0" spacing="60.0">
                      <children>
-                        <VBox alignment="TOP_CENTER" prefHeight="80.0" prefWidth="113.0">
-                           <children>
-                              <Label text="Scene Name :">
-                                 <font>
-                                    <Font name="System Bold Italic" size="12.0" />
-                                 </font>
-                              </Label>
-                              <Label fx:id="sceneNameLabel" text="Unnamed">
-                                 <font>
-                                    <Font size="17.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </VBox>
-                        <VBox alignment="CENTER" prefHeight="80.0" prefWidth="295.0">
+                        <VBox alignment="CENTER" prefHeight="80.0" prefWidth="1067.0">
                            <children>
                               <Label alignment="CENTER" contentDisplay="CENTER" text="Scenario Builder">
                                  <font>
@@ -341,18 +333,36 @@
                               </Label>
                            </children>
                         </VBox>
-                        <VBox alignment="TOP_CENTER" prefHeight="80.0" prefWidth="126.0">
+                        <VBox alignment="TOP_RIGHT" prefHeight="80.0" prefWidth="524.0" spacing="10.0">
                            <children>
-                              <Label text="Scenario Name :">
-                                 <font>
-                                    <Font name="System Bold Italic" size="12.0" />
-                                 </font>
-                              </Label>
-                              <Label fx:id="scenarioNameLabel" text="Scenario Name">
-                                 <font>
-                                    <Font size="17.0" />
-                                 </font>
-                              </Label>
+                              <VBox alignment="TOP_RIGHT" prefHeight="46.0" prefWidth="86.0">
+                                 <children>
+                                    <Label text="Scenario Name :">
+                                       <font>
+                                          <Font name="System Italic" size="12.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="scenarioNameLabel" text="Scenario Name">
+                                       <font>
+                                          <Font name="System Bold" size="12.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                              <VBox alignment="TOP_RIGHT" prefHeight="40.0" prefWidth="85.0">
+                                 <children>
+                                    <Label text="Scene Name :">
+                                       <font>
+                                          <Font name="System Italic" size="12.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="sceneNameLabel" text="Unnamed Scene">
+                                       <font>
+                                          <Font name="System Bold" size="12.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </VBox>
                            </children>
                         </VBox>
                      </children>
