--- a/Enamel/src/enamel/CreationSetupView.fxml
+++ b/Enamel/src/enamel/CreationSetupView.fxml
@@ -12,14 +12,14 @@
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
          <children>
-            <Label layoutX="38.0" layoutY="14.0" prefHeight="88.0" prefWidth="324.0" text="WELCOME TO THE TEACHING SCENARIO BUILDER!">
+            <Label alignment="CENTER" layoutX="1.0" layoutY="41.0" prefHeight="42.0" prefWidth="400.0" text="WELCOME TO THE TEACHING SCENARIO BUILDER!">
                <font>
-                  <Font name="Calisto MT Bold Italic" size="13.0" />
+                  <Font name="Arial Black" size="13.0" />
                </font>
             </Label>
             <ChoiceBox fx:id="nobBox" layoutX="223.0" layoutY="269.0" prefHeight="25.0" prefWidth="53.0" />
-            <Label layoutX="67.0" layoutY="202.0" text="NUMBER OF BRAILLE CELLS" />
-            <Label layoutX="92.0" layoutY="273.0" text="NUMBER OF BUTTONS" />
+            <Label alignment="CENTER_RIGHT" layoutX="43.0" layoutY="198.0" prefHeight="25.0" prefWidth="171.0" text="NUMBER OF BRAILLE CELLS" textAlignment="CENTER" />
+            <Label alignment="CENTER_RIGHT" layoutX="41.0" layoutY="269.0" prefHeight="25.0" prefWidth="171.0" text="NUMBER OF BUTTONS" />
             <TextField fx:id="scenarioNameTextField" layoutX="126.0" layoutY="143.0" />
             <Label layoutX="115.0" layoutY="107.0" text="Please enter the scenario name: " />
             <Button layoutX="227.0" layoutY="333.0" mnemonicParsing="false" onAction="#continueButton" prefHeight="42.0" prefWidth="135.0" text="Continue">
