--- a/Enamel/src/enamel/ScenarioCreationView.fxml
+++ b/Enamel/src/enamel/ScenarioCreationView.fxml
@@ -85,7 +85,7 @@
                         <Font name="Arial Black" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="135.0" text="Finish Scene (Save Scene)" textAlignment="CENTER" wrapText="true">
+                  <Button mnemonicParsing="false" onAction="#finishSceneButton" prefHeight="42.0" prefWidth="135.0" text="Finish Scene (Save Scene)" textAlignment="CENTER" wrapText="true">
                      <font>
                         <Font name="Arial Black" size="12.0" />
                      </font>
@@ -99,7 +99,7 @@
             </HBox>
             <AnchorPane layoutY="4.0" prefHeight="667.0" prefWidth="813.0">
                <children>
-                  <Label layoutX="14.0" layoutY="625.0" prefHeight="17.0" prefWidth="501.0" text="*Note you must click the 'Save Interaction' button for each button you set an interaction for." />
+                  <Label layoutX="14.0" layoutY="625.0" prefHeight="17.0" prefWidth="685.0" text="*Note you must click the 'Save Interaction' button for each button you set an interaction for." />
                   <VBox layoutX="-2.0" layoutY="77.0" prefHeight="90.0" prefWidth="813.0" spacing="2.0">
                      <children>
                         <Label prefHeight="27.0" prefWidth="105.0" text="STEP ONE">
@@ -115,7 +115,10 @@
                         <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="30.0">
                            <children>
                               <TextField fx:id="sceneNameTextField" prefHeight="30.0" prefWidth="150.0" />
-                              <Button mnemonicParsing="false" onAction="#sceneNameButton" prefHeight="27.0" prefWidth="119.0" text="Save Scene Name" />
+                              <Button mnemonicParsing="false" onAction="#sceneNameButton" prefHeight="27.0" prefWidth="140.0" text="Save Scene Name">
+                                 <font>
+                                    <Font size="11.0" />
+                                 </font></Button>
                            </children>
                         </HBox>
                      </children>
@@ -130,7 +133,7 @@
                               <Font name="Cooper Black" size="19.0" />
                            </font>
                         </Label>
-                        <Label prefHeight="17.0" prefWidth="376.0" text="Either type or record a question/statement for the current scene: ">
+                        <Label prefHeight="17.0" prefWidth="400.0" text="Either type or record a question/statement for the current scene: ">
                            <font>
                               <Font name="System Bold Italic" size="12.0" />
                            </font>
@@ -138,10 +141,16 @@
                         <HBox alignment="CENTER_LEFT" maxHeight="87.0" prefHeight="87.0" prefWidth="793.0" spacing="30.0">
                            <children>
                               <TextArea fx:id="questionTextArea" maxHeight="65.0" prefHeight="70.0" prefWidth="402.0" />
-                              <VBox prefHeight="57.0" prefWidth="100.0" spacing="16.0">
+                              <VBox prefHeight="66.0" prefWidth="134.0" spacing="16.0">
                                  <children>
-                                    <Button mnemonicParsing="false" onAction="#addTextButton" prefHeight="27.0" prefWidth="119.0" text="Add Text" />
-                                    <Button mnemonicParsing="false" onAction="#recordAudioButton" prefHeight="27.0" prefWidth="119.0" text="Record Audio" />
+                                    <Button mnemonicParsing="false" onAction="#addTextButton" prefHeight="25.0" prefWidth="136.0" text="Add Text">
+                                       <font>
+                                          <Font size="11.0" />
+                                       </font></Button>
+                                    <Button mnemonicParsing="false" onAction="#recordAudioButton" prefHeight="24.0" prefWidth="135.0" text="Record Audio">
+                                       <font>
+                                          <Font size="11.0" />
+                                       </font></Button>
                                  </children>
                                  <HBox.margin>
                                     <Insets bottom="5.0" top="5.0" />
@@ -243,7 +252,10 @@
                                     <HBox alignment="TOP_CENTER" maxWidth="230.0" prefHeight="25.0" prefWidth="202.0" spacing="20.0">
                                        <children>
                                           <ChoiceBox fx:id="letterBox" prefHeight="25.0" prefWidth="59.0" />
-                                          <Button mnemonicParsing="false" onAction="#setPinsButton" text="Set Pins" />
+                                          <Button mnemonicParsing="false" onAction="#setPinsButton" text="Set Pins">
+                                             <font>
+                                                <Font size="11.0" />
+                                             </font></Button>
                                        </children>
                                     </HBox>
                                  </children>
@@ -290,8 +302,14 @@
                                        <children>
                                           <HBox alignment="CENTER" prefHeight="34.0" prefWidth="478.0" spacing="5.0">
                                              <children>
-                                                <Label text="Speech/Audio on button click. (OPTIONAL)" />
-                                                <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="92.0" text="Record Audio" />
+                                                <Label prefHeight="16.0" prefWidth="223.0" text="Speech/Audio on button click. (OPTIONAL)">
+                                                   <font>
+                                                      <Font size="11.0" />
+                                                   </font></Label>
+                                                <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="98.0" text="Record Audio">
+                                                   <font>
+                                                      <Font size="11.0" />
+                                                   </font></Button>
                                              </children>
                                           </HBox>
                                           <HBox prefHeight="62.0" prefWidth="412.0" spacing="30.0">
@@ -301,7 +319,10 @@
                                           </HBox>
                                        </children>
                                     </VBox>
-                                    <Button mnemonicParsing="false" onAction="#saveInteractionButton" prefHeight="56.0" prefWidth="115.0" text="Save Interaction" />
+                                    <Button mnemonicParsing="false" onAction="#saveInteractionButton" prefHeight="56.0" prefWidth="139.0" text="Save Interaction">
+                                       <font>
+                                          <Font size="11.0" />
+                                       </font></Button>
                                  </children>
                                  <padding>
                                     <Insets right="10.0" />
@@ -333,16 +354,16 @@
                               </Label>
                            </children>
                         </VBox>
-                        <VBox alignment="TOP_RIGHT" prefHeight="80.0" prefWidth="524.0" spacing="10.0">
+                        <VBox alignment="TOP_RIGHT" prefHeight="80.0" prefWidth="622.0" spacing="10.0">
                            <children>
                               <VBox alignment="TOP_RIGHT" prefHeight="46.0" prefWidth="86.0">
                                  <children>
-                                    <Label text="Scenario Name :">
+                                    <Label text="Scenario Name :" underline="true">
                                        <font>
                                           <Font name="System Italic" size="12.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="scenarioNameLabel" text="Scenario Name">
+                                    <Label fx:id="scenarioNameLabel" alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="154.0" text="Scenario Name">
                                        <font>
                                           <Font name="System Bold" size="12.0" />
                                        </font>
@@ -351,12 +372,12 @@
                               </VBox>
                               <VBox alignment="TOP_RIGHT" prefHeight="40.0" prefWidth="85.0">
                                  <children>
-                                    <Label text="Scene Name :">
+                                    <Label text="Scene Name :" underline="true">
                                        <font>
                                           <Font name="System Italic" size="12.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="sceneNameLabel" text="Unnamed Scene">
+                                    <Label fx:id="sceneNameLabel" alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="152.0" text="Unnamed Scene">
                                        <font>
                                           <Font name="System Bold" size="12.0" />
                                        </font>
