--- a/Enamel/src/enamel/MainMenuViewAA.fxml
+++ b/Enamel/src/enamel/MainMenuViewAA.fxml
@@ -28,7 +28,7 @@
             <font>
                <Font name="Arial Black" size="12.0" />
             </font></Button>
-         <Button layoutX="396.0" layoutY="466.0" prefHeight="50.0" prefWidth="151.0" text="Tutorial">
+         <Button layoutX="396.0" layoutY="466.0" prefHeight="50.0" prefWidth="151.0" text="Sample Scenarios">
             <font>
                <Font name="Arial Black" size="12.0" />
             </font></Button>
@@ -58,7 +58,7 @@
          </MenuBar>
          <Label layoutX="256.0" layoutY="232.0" text="Create a new teaching scenario for your student(s) using a convenient application." />
          <Label layoutX="197.0" layoutY="335.0" text="Choose an existing teaching scenario from one that has been previously created or one from the file browser." />
-         <Label layoutX="357.0" layoutY="532.0" text="Basic tutorial on how to use the application." />
+         <Label layoutX="220.0" layoutY="536.0" text="Some preset scenarios for you to try out yourself to get an idea of what our application can do." />
          <Text layoutX="231.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the Authoring App!">
             <font>
                <Font name="Broadway" size="32.0" />
@@ -72,6 +72,7 @@
             </font>
          </Button>
          <Label layoutX="383.0" layoutY="433.0" text="Edit a previously created scenario." />
+         <Label layoutX="299.0" layoutY="637.0" text="Need Help? Try reading our usermanual.  It is visually impaired friendly." />
       </children>
    </AnchorPane>
 
