--- a/Enamel/src/enamel/MainMenuViewAA.fxml
+++ b/Enamel/src/enamel/MainMenuViewAA.fxml
@@ -66,7 +66,7 @@
          <CheckBox layoutX="32.0" layoutY="677.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="224.0" text="Are you visually capable?" />
          <Label alignment="CENTER" layoutX="838.0" layoutY="681.0" prefHeight="17.0" prefWidth="150.0" text="Reading Speed" />
          <ChoiceBox fx:id="readSpeedBox" layoutX="839.0" layoutY="710.0" prefWidth="150.0" />
-         <Button layoutX="396.0" layoutY="366.0" prefHeight="50.0" prefWidth="151.0" text="Edit Scenario">
+         <Button layoutX="396.0" layoutY="366.0" onAction="#editScenarioButton" prefHeight="50.0" prefWidth="151.0" text="Edit Scenario">
             <font>
                <Font name="Arial Black" size="12.0" />
             </font>
