--- a/Enamel/src/enamel/CreationSetupView.fxml
+++ b/Enamel/src/enamel/CreationSetupView.fxml
@@ -13,7 +13,7 @@
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
          <children>
-            <Label alignment="CENTER" layoutY="37.0" prefHeight="42.0" prefWidth="400.0" text="WELCOME TO THE TEACHING SCENARIO BUILDER!">
+            <Label alignment="CENTER" layoutY="37.0" prefHeight="42.0" prefWidth="400.0" text="TEACHING SCENARIO BUILDER">
                <font>
                   <Font name="System Bold Italic" size="15.0" />
                </font>
@@ -26,13 +26,13 @@
                      </font>
                   </Label>
                   <TextField fx:id="scenarioNameTextField" maxWidth="150.0" onKeyReleased="#userTyped" prefHeight="25.0" prefWidth="336.0" />
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="25.0" prefWidth="200.0" text="Number of Braille Cells:">
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="25.0" prefWidth="397.0" text="Number of Braille Cells:">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
                   <ChoiceBox fx:id="nocBox" prefHeight="25.0" prefWidth="53.0" />
-                  <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="Number of Interactive Buttons:">
+                  <Label alignment="CENTER" prefHeight="25.0" prefWidth="400.0" text="Number of Interactive Buttons:">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
