--- a/Enamel/src/enamel/EditScenarioView.fxml
+++ b/Enamel/src/enamel/EditScenarioView.fxml
@@ -22,7 +22,6 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-
 <VBox maxHeight="768.0" maxWidth="1024.0" minHeight="768.0" minWidth="1024.0" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="enamel.EditScenarioController">
    <children>
       <VBox prefHeight="768.0" prefWidth="1024.0">
@@ -106,7 +105,7 @@
                                     <Font name="System Bold Italic" size="19.0" />
                                  </font>
                               </Label>
-                              <Label text="Give this scene a name incase you would like to change it in the furture:">
+                              <Label prefHeight="17.0" prefWidth="674.0" text="Give this scene a name incase you would like to change it in the furture:">
                                  <font>
                                     <Font name="System Bold Italic" size="12.0" />
                                  </font>
@@ -133,7 +132,7 @@
                                     <Font name="System Bold" size="17.0" />
                                  </font>
                               </Label>
-                              <Label prefHeight="17.0" prefWidth="400.0" text="Type and/or record a question/statement for the current scene: ">
+                              <Label prefHeight="17.0" prefWidth="657.0" text="Type and/or record a question/statement for the current scene: ">
                                  <font>
                                     <Font name="System Bold Italic" size="12.0" />
                                  </font>
@@ -166,14 +165,14 @@
                               <Insets left="20.0" />
                            </padding>
                         </VBox>
-                        <VBox layoutX="2.0" layoutY="358.0" prefHeight="164.0" prefWidth="697.0" spacing="2.0">
+                        <VBox layoutX="2.0" layoutY="358.0" prefHeight="164.0" prefWidth="733.0" spacing="2.0">
                            <children>
                               <Label prefHeight="27.0" prefWidth="128.0" text="Option 2" underline="true">
                                  <font>
                                     <Font name="System Bold" size="17.0" />
                                  </font>
                               </Label>
-                              <Label text="Choose which pins to display for each braille cell.  Select the pins manually or select a letter from the english alphabet:">
+                              <Label prefHeight="17.0" prefWidth="712.0" text="Choose which pins to display for each braille cell.  Select the pins manually or select a letter from the english alphabet:">
                                  <font>
                                     <Font name="System Bold Italic" size="12.0" />
                                  </font>
@@ -182,7 +181,7 @@
                                  <children>
                                     <VBox alignment="CENTER" prefHeight="103.0" prefWidth="90.0" spacing="10.0">
                                        <children>
-                                          <Label alignment="CENTER" prefHeight="27.0" prefWidth="80.0" text="Cell Number:" />
+                                          <Label alignment="CENTER" prefHeight="46.0" prefWidth="90.0" text="Cell Number:" />
                                           <ComboBox fx:id="nocBox" onAction="#selectedBrailleCell" prefHeight="25.0" prefWidth="42.0" />
                                        </children>
                                     </VBox>
@@ -256,7 +255,7 @@
                                     </VBox>
                                     <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
                                        <children>
-                                          <Label alignment="CENTER" prefHeight="46.0" prefWidth="88.0" text="Display English Letter:" textAlignment="CENTER" wrapText="true" />
+                                          <Label alignment="CENTER" prefHeight="45.0" prefWidth="100.0" text="Display Letter:" textAlignment="CENTER" wrapText="true" />
                                           <ComboBox fx:id="letterBox" onAction="#setPinsBox" prefHeight="25.0" prefWidth="60.0" />
                                        </children>
                                     </VBox>
@@ -287,7 +286,7 @@
                                  <children>
                                     <VBox alignment="CENTER" maxHeight="55.0" prefHeight="82.0" prefWidth="94.0" spacing="10.0">
                                        <children>
-                                          <Label text="Button Number:" />
+                                          <Label alignment="CENTER" prefHeight="17.0" prefWidth="97.0" text="Button Number:" />
                                           <ComboBox fx:id="nobBox" onAction="#selectedButtonNumber" prefHeight="25.0" prefWidth="7.0" />
                                        </children>
                                     </VBox>
@@ -354,17 +353,17 @@
                                                 <Font name="System Bold" size="12.0" />
                                              </font>
                                           </Label>
-                                          <ComboBox fx:id="listOfScenesBox" onAction="#loadSceneBox" prefWidth="150.0" />
-                                          <HBox alignment="TOP_CENTER" prefHeight="35.0" prefWidth="283.0" spacing="80.0">
+                                          <ComboBox fx:id="listOfScenesBox" onAction="#loadSceneBox" prefHeight="25.0" prefWidth="224.0" />
+                                          <HBox alignment="TOP_CENTER" prefHeight="35.0" prefWidth="283.0" spacing="20.0">
                                              <children>
-                                                <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#moveSceneUpOnClick" text="Move Scene Up">
+                                                <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#moveSceneUpOnClick" prefHeight="24.0" prefWidth="130.0" text="Move Scene Up">
                                                    <font>
-                                                      <Font size="11.0" />
+                                                      <Font size="10.0" />
                                                    </font>
                                                 </Button>
-                                                <Button layoutX="81.0" layoutY="10.0" mnemonicParsing="false" onAction="#moveSceneDownOnClick" text="Move Scene Down">
+                                                <Button layoutX="81.0" layoutY="10.0" mnemonicParsing="false" onAction="#moveSceneDownOnClick" prefHeight="24.0" prefWidth="141.0" text="Move Scene Down">
                                                    <font>
-                                                      <Font size="11.0" />
+                                                      <Font size="10.0" />
                                                    </font>
                                                 </Button>
                                              </children>
@@ -394,11 +393,6 @@
                            <children>
                               <HBox alignment="CENTER_LEFT" prefHeight="20.0" prefWidth="423.0">
                                  <children>
-                                    <Label prefHeight="17.0" prefWidth="80.0" text="Scene Name :">
-                                       <font>
-                                          <Font name="System Italic" size="12.0" />
-                                       </font>
-                                    </Label>
                                     <Label fx:id="sceneNameLabel" prefHeight="17.0" prefWidth="185.0" text="Unnamed New Scene">
                                        <font>
                                           <Font name="System Bold" size="12.0" />
